infrastructure/ansible-k8s/files/regru-webhook.yaml
---
# Source: regru-cluster-issuer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regru-webhook-regru-cluster-issuer
  namespace: cert-manager
  labels:
    app: regru-cluster-issuer
    chart: regru-cluster-issuer-1.1.0
    release: regru-webhook
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: regru-cluster-issuer
    release: regru-webhook
---
# Source: regru-cluster-issuer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regru-webhook-regru-cluster-issuer
  namespace: cert-manager
  labels:
    app: regru-cluster-issuer
    chart: regru-cluster-issuer-1.1.0
    release: regru-webhook
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regru-cluster-issuer
      release: regru-webhook
  template:
    metadata:
      labels:
        app: regru-cluster-issuer
        release: regru-webhook
    spec:
      serviceAccountName: regru-webhook-regru-cluster-issuer
      containers:
        - name: regru-cluster-issuer
          image: ghcr.io/flant/cluster-issuer-regru:1.1.0
          args:
            - --tls-cert-file=/tls/tls.crt
            - --tls-private-key-file=/tls/tls.key
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
          volumeMounts:
            - name: certs
              mountPath: /tls
              readOnly: true
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              memory: 256Mi
      volumes:
        - name: certs
          secret:
            secretName: regru-webhook-regru-cluster-issuer-webhook-tls
